--- a/src/shared/styles/style.scss
+++ b/src/shared/styles/style.scss
@@ -1,7 +1,6 @@
+@charset "UTF-8";/*　*/
+@import "_mixin";
+
 body{
-  background: #fff;
-  .container{
-    width: 960px;
-    margin: 0 auto;
-  }
+  background: $unco;
 }
